--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
   "name": "express-api-template",
   "version": "1.0.0",
+  "private": true,
   "description": "Express API Template project",
   "main": "app.js",
   "scripts": {
+    "start": "node ./src/bin/www",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1"
   },
   "repository": {
     "type": "git",
